# chat-wit

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/connect/: Cargo.toml
crates/sha256/: Cargo.toml
crates/sha256/src/: lib.rs
crates/sha256/wit/: world.wit
server/: Cargo.toml
server/src/: main.rs
