[package]
name = "chat-server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "16.0.0", features = ["component-model"] }
wasmtime-wasi = { version = "16.0.0", features = [] }

[dependencies.tokio]
workspace = true
default-features = false
features = ["rt-multi-thread", "macros", "signal", "sync", "parking_lot"]
